initialize the app scaffolding for rootlayout with header/footer

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,6 +8,20 @@
   --background-end-rgb: 255, 255, 255;
 }
 
+@font-face {
+  font-family: 'broadway';
+  src: url('/assets/fonts/Broadway3D.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'aliens';
+  src: url('/assets/fonts/Alienscows-Trial.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
@@ -18,12 +32,7 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
 
 @layer utilities {
